# Clean-Architecture

./: README.md
CleanArqBase/: CMakeLists.txt
CleanArqBase/src/: CMakeLists.txt  appbuilder.cpp  appbuilder.h  main.cpp
CleanArqBase/src/1_entities/: CMakeLists.txt  entitiescontext.cpp  entitiescontext.h
CleanArqBase/src/2_usecases/: CMakeLists.txt  usecase.h
CleanArqBase/src/3_controllers/: CMakeLists.txt  controllerscontext.cpp
CleanArqBase/src/4_frameworks/: CMakeLists.txt  frameworkscontext.cpp  frameworkscontext.h
